updated button text

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         <a class="btn-one style2 rec" href="https://www.travolex.com">
                             <span class="border-box"></span>
                           <span class="bg bg--gradient"></span>
-                            <span class="txt">Travel</span>
+                            <span class="txt">Personal Travel</span>
                         </a>
                     </div>
                 </div>
@@ -274,7 +274,7 @@
                         <a class="btn-one style2 tra" href="corporate-travel">
                             <span class="border-box"></span>
                             <span class="bg bg--gradient"></span>
-                            <span class="txt">Corporate Travel</span>
+                            <span class="txt">Business Travel</span>
                         </a>
                     </div>
 
