new Schemas added

--- a/corporate-travel/attestation.html
+++ b/corporate-travel/attestation.html
@@ -126,13 +126,14 @@ height: 150px!important;
 {
   "@context": "http://schema.org",
   "@type": "Product",
-  "name": "Top Hotel Booking Agency in Pune",
-  "image": "https://www.new.valiantbusinesssolutions.com/assets/images/services/Hotel-booking-service-VBS.png",
-  "description": "Finding the perfect place to stay while traveling shouldn’t be stressful - and with VBS, it never is. As a leading hotel booking service provider in Pune, we make it effortless for you to find, compare, and book hotels that perfectly match your travel style, budget, and preferences.\n\nWhether you’re planning a business trip, a family vacation, or an international getaway, our expert team takes care of everything - from selecting hotels in prime locations to confirming reservations quickly and securely. We partner with top-rated hotels and resorts worldwide, known for their exceptional comfort, scenic views, and outstanding hospitality.",
+  "name": "Apostille Services in Pune",
+  "image": "https://www.valiantbusinesssolutions.com/assets/images/services/attestation-website-img.png",
+  "description": "Attestation is the process of verifying the authenticity of your documents to ensure they are valid for use in another country.",
+  "url": "https://www.valiantbusinesssolutions.com/corporate-travel/attestation",
   "brand": {
     "@type": "Brand",
     "name": "VBS",
-    "logo": "https://www.new.valiantbusinesssolutions.com/assets/images/logo/VBS%20FINAL%20LOGO%20white.png"
+    "logo": "https://www.valiantbusinesssolutions.com/assets/images/logo/VBS%20FINAL%20LOGO%20white.png"
   }
 }
 </script>
