--- a/corporate-travel/immigrant-visas.html
+++ b/corporate-travel/immigrant-visas.html
@@ -94,13 +94,14 @@
 {
   "@context": "http://schema.org",
   "@type": "Product",
-  "name": "Visa Assistance Service in Pune",
-  "image": "https://www.new.valiantbusinesssolutions.com/assets/images/services/visa-service-VBS.png",
-  "description": "VBS is a leading visa assistance agency in Pune\n                  helping individuals, students, and professionals with fast, reliable, and hassle-free visa support.\n                  Whether you need help with\n                  <STRONG>tourist visas, business visas, student visas, or work permits</STRONG>, our team of certified\n                  visa consultants in Pune helps you simplify the visa process, reduce rejection risks, and get\n                  approvals quickly.",
+  "name": "Immigrant Visa Assistance in Pune",
+  "image": "https://www.valiantbusinesssolutions.com/assets/images/services/VBS%20-%20website%20img%20.png",
+  "description": "VBS is a leading immigration consultancy in Pune, helping students, skilled professionals, families, and permanent residency applicants with reliable and end-to-end visa support.",
+  "url": "https://www.valiantbusinesssolutions.com/corporate-travel/immigrant-visas",
   "brand": {
     "@type": "Brand",
     "name": "VBS",
-    "logo": "https://www.new.valiantbusinesssolutions.com/assets/images/logo/VBS%20FINAL%20LOGO%20white.png"
+    "logo": "https://www.valiantbusinesssolutions.com/assets/images/logo/VBS%20FINAL%20LOGO%20white.png"
   }
 }
 </script>
