--- a/blog.html
+++ b/blog.html
@@ -128,6 +128,40 @@
                 <!--Start Single Blog Style7-->
 
                 <div class="col-lg-4 col-sm-6">
+                    <div class="blog-card">
+                        <div class="blog-img">
+                            <a href="blogs/student-visa-assistance-in-pune-usa-canada-uk">
+                                <img src="blogs/assets/img/blog/student-vissa-blog-big-img.png"
+                                    alt="Top Best Job Consultancy In Pune | VBS"
+                                    title="How to Make an Eye-Catching LinkedIn Profile">
+                            </a>
+                        </div>
+                        <div class="blog-text">
+                            <ul>
+                                <li>
+                                    <i class='bx bxs-user'></i>
+                                    Admin
+                                </li>
+                                <li>
+                                    <i class='bx bx-calendar'></i>
+                                    12 December, 2025
+                                </li>
+                            </ul>
+
+                            <h3>
+                                <a href="blogs/student-visa-assistance-in-pune-usa-canada-uk">Student Visa Assistance in Pune: Expert Support for USA, Canada & UK
+                                    <br><br><br>
+                                </a>
+                            </h3>
+
+                            <a href="blogs/student-visa-assistance-in-pune-usa-canada-uk" class="blog-btn">
+                                Read More
+                                <i class='bx bx-plus bx-spin'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
                      <div class="blog-card">
                         <div class="blog-img">
                             <a href="blogs/best-mice-destinations-2026">
