--- a/blog.html
+++ b/blog.html
@@ -128,10 +128,43 @@
                 <!--Start Single Blog Style7-->
 
                 <div class="col-lg-4 col-sm-6">
+                     <div class="blog-card">
+                        <div class="blog-img">
+                            <a href="blogs/ultimate-corporate-travel-guide-2026">
+                                <img src="assets/images/blog/Corporate-travel-guid-2026-small-img.png"
+                                    alt="Top Best Job Consultancy In Pune | VBS"
+                                    title="How to Make an Eye-Catching LinkedIn Profile">
+                            </a>
+                        </div>
+                        <div class="blog-text">
+                            <ul>
+                                <li>
+                                    <i class='bx bxs-user'></i>
+                                    Admin
+                                </li>
+                                <li>
+                                    <i class='bx bx-calendar'></i>
+                                    02 December, 2026
+                                </li>
+                            </ul>
+
+                            <h3>
+                                <a href="blogs/ultimate-corporate-travel-guide-2026">The Ultimate Guide to Corporate Travel in 2026
+                                </a>
+                            </h3>
+
+                            <a href="blogs/ultimate-corporate-travel-guide-2026" class="blog-btn">
+                                Read More
+                                <i class='bx bx-plus bx-spin'></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
                     <div class="blog-card">
                         <div class="blog-img">
                             <a href="blogs/student-visa-assistance-in-pune-usa-canada-uk">
-                                <img src="blogs/assets/img/blog/student-vissa-blog-big-img.png"
+                                <img src="blogs/assets/img/blog/student-vissa-blog-small-img.png"
                                     alt="Top Best Job Consultancy In Pune | VBS"
                                     title="How to Make an Eye-Catching LinkedIn Profile">
                             </a>
@@ -149,8 +182,7 @@
                             </ul>
 
                             <h3>
-                                <a href="blogs/student-visa-assistance-in-pune-usa-canada-uk">Student Visa Assistance in Pune: Expert Support for USA, Canada & UK
-                                    <br><br><br>
+                                <a href="blogs/student-visa-assistance-in-pune-usa-canada-uk">Student Visa Assistance in Pune
                                 </a>
                             </h3>
 
@@ -184,7 +216,7 @@
 
                             <h3>
                                 <a href="blogs/best-mice-destinations-2026">Top MICE Destinations in 2026
-                                    <br><br><br>
+                                    <br>
                                 </a>
                             </h3>
 
@@ -217,9 +249,8 @@
                             </ul>
 
                             <h3>
-                                <a href="blogs/business-travel-destinations-2025">Top Corporate Travel Trends for 2025:
-                                    What Businesses Need to Prepare For
-                                    <br><br><br>
+                                <a href="blogs/business-travel-destinations-2025">Top Corporate Travel Trends for 2025
+                                    <br>
                                 </a>
                             </h3>
 
