--- a/corporate-travel/visa-assistance.html
+++ b/corporate-travel/visa-assistance.html
@@ -113,14 +113,14 @@
     <header-element></header-element>
     <section class="breadcrumb-area">
       <div class="breadcrumb-area-bg" style="
-            background-image: url(../../assets/images/corporate/VISA-banner.png);
+            background-image: url(../assets/images/corporate/VBS-Visa-Assistance-banner-img.png);
           "></div>
       <div class="container">
         <div class="row">
           <div class="col-xl-12">
             <div class="inner-content text-center">
               <div class="title" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1500">
-                <h1 class="text-white">
+                <h1 class="text-white mt-5 pt-2 font-size-80">
                   Visa Assistance Service in Pune | Trusted Visa Assistance Agency - VBS
                 </h1>
               </div>
