--- a/corporate-travel/hotel-booking.html
+++ b/corporate-travel/hotel-booking.html
@@ -147,7 +147,7 @@ height: 150px!important;
         <div
           class="breadcrumb-area-bg"
           style="
-            background-image: url(../../assets/images/corporate/hotel-booking-banner.png);
+            background-image: url(../assets/images/corporate/VBS-hotel-booking-banner-img.png);
           "
         ></div>
         <div class="container">
@@ -160,7 +160,7 @@ height: 150px!important;
                   data-aos-easing="linear"
                   data-aos-duration="1500"
                 >
-                  <h1 class="text-white">
+                  <h1 class="text-white mt-5 font-size-80">
                     Top Hotel Booking Agency in Pune
                   </h1>
                 </div>
